--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@
 envlist = py26, py27, py33, py34, py35
 
 [testenv]
-commands = coverage run setup.py test
 deps = coverage
+commands = coverage run -m unittest spake2.test_spake2
 
 [testenv:speed]
 commands = {envpython} setup.py speed
