--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,10 @@
 envlist = py26, py27, py33, py34, py35
 
 [testenv]
-deps = coverage
-commands = coverage run -m unittest spake2.test_spake2
+deps =
+     coverage
+     pytest
+commands = coverage run -m pytest spake2
 
 [testenv:speed]
 commands = {envpython} setup.py speed
