move source into src/

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,8 @@
 
 [run]
 include =
- spake2/*
+ src/spake2/*
 omit =
- spake2/six.py
- spake2/_version.py
- spake2/test_spake2.py
+ */spake2/six.py
+ */spake2/_version.py
+ */spake2/test_spake2.py
