--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = spake2/_version.py
+versionfile_source = src/spake2/_version.py
 versionfile_build = spake2/_version.py
 tag_prefix = v
 parentdir_prefix = python-spake2-
