--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist = py26, py27, py33, py34, py35
 deps =
      coverage
      pytest
-commands = coverage run -m pytest src/spake2
+commands = coverage run -m pytest {posargs:src/spake2}
 
 [testenv:speed]
 commands = {envpython} setup.py speed
