--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,11 @@ envlist = py26, py27, py33, py34, py35
 
 [testenv]
 deps =
+     pytest
+commands = py.test {posargs:src/spake2}
+
+[testenv:coverage]
+deps =
      coverage
      pytest
 commands = coverage run -m pytest {posargs:src/spake2}
