--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+[wheel]
+universal = 1
 
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
