tox.ini: set usedevelop=True for faster tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@
 envlist = py26, py27, py33, py34, py35, py36
 
 [testenv]
+usedevelop = True
 deps =
      pytest
 commands = py.test {posargs:src/spake2}
