--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include versioneer.py
-include spake2/_version.py
+include src/spake2/_version.py
 include README.md NEWS LICENSE
 include tox.ini .travis.yml .coveragerc
